Implementando a camada de controller de pedidos do projeto de delivery.