@@ -4,6 +4,7 @@ import com.restaurante.delivery.housefood.cliente.domain.Cliente;
 import lombok.Value;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Value
 public class ClienteListResponse {
@@ -13,7 +14,7 @@ public class ClienteListResponse {
 
 
     public static List<ClienteListResponse> converte(List<Cliente> listCliente) {
-        return listCliente.stream().map(ClienteListResponse:: new).toList();
+        return listCliente.stream().map(ClienteListResponse:: new).collect(Collectors.toList());
     }
 
     public ClienteListResponse(Cliente cliente){
